day-two/httpbin/app/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  labels:
    app: httpbin
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: http # deployment.spec.template.spec.containers.ports.name
  selector:
    app: httpbin
  sessionAffinity: None
